Cycles All Transmission Render Passes wrong over bright image data with GlassBSDF #108211

Closed
opened 2023-05-24 01:20:27 +02:00 by Eric Klein · 8 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.30

Blender Version
Broken: 4.0, 3.6 beta, 3.6 175b1b449ec2
Worked: Daily build from 3.6.0 Alpha from March 5 - 2023

Short description of error
Cycles all the transmission passes (Direct, Indirect and Color) have wrond over bright image data when using GlassBSDF. Replacing the GlassBSDF with PrincipleBSDF solves image artifacts.

Checking the commit history. It looks like the commits from Lukas Stockner on 3-25-2023. The "Cycles: Use per-microfacet Fresnel term for Glass closures" or "Cycles: Make Fresnel term independent of microfacet closure type" broke the transmission render passes.

Exact steps for others to reproduce the error

  1. Load demo BMW blender scene or attached file.
  2. Enable Cycles render preview.
  3. Select the "Transmission Direct" render pass.
  4. Compare with release 3.5 for reference.

See images below the over bright from blender 3.6 March 6 forward compared to March 5 build.

3.5 3.6
Image Image
image Image

Test file:
Material_GlassBSDF.blend

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.30 **Blender Version** Broken: 4.0, 3.6 beta, 3.6 `175b1b449ec2` Worked: Daily build from 3.6.0 Alpha from March 5 - 2023 **Short description of error** Cycles all the transmission passes (Direct, Indirect and Color) have wrond over bright image data when using GlassBSDF. Replacing the GlassBSDF with PrincipleBSDF solves image artifacts. Checking the commit history. It looks like the commits from Lukas Stockner on 3-25-2023. The "Cycles: Use per-microfacet Fresnel term for Glass closures" or "Cycles: Make Fresnel term independent of microfacet closure type" broke the transmission render passes. **Exact steps for others to reproduce the error** 1. Load demo BMW blender scene or attached file. 2. Enable Cycles render preview. 3. Select the "Transmission Direct" render pass. 4. Compare with release 3.5 for reference. See images below the over bright from blender 3.6 March 6 forward compared to March 5 build. | 3.5 | 3.6 | | -------- | -------- | | ![Image](https://projects.blender.org/blender/blender/attachments/0bb807d3-139b-4211-b227-450a1465ef4c) | ![Image](https://projects.blender.org/blender/blender/attachments/0dd22b28-971e-4cfa-9a1a-e3e071b45f7c) | | ![image](https://projects.blender.org/attachments/e75f7b86-62ac-4b16-8f80-40cf94cb0030) | ![Image](https://projects.blender.org/attachments/d17daff5-b3b7-4e4d-bc67-78532fd33510) | Test file: [Material_GlassBSDF.blend](https://projects.blender.org/attachments/357fdeeb-7f04-4ef8-afcc-5f6a7153ab6e)
Eric Klein added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-24 01:20:28 +02:00
Member

Hi, thanks for the report. Could you check whether its fixed in recent 3.6 build after #108125: https://builder.blender.org/download/daily/

Also, I'm not able to locate BMW file on demo-files page

Hi, thanks for the report. Could you check whether its fixed in recent 3.6 build after #108125: https://builder.blender.org/download/daily/ Also, I'm not able to locate BMW file on demo-files page
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-05-29 05:44:27 +02:00
Author

The latest 3.6 beta and 4.0 alpha from 5/29/2023. It does not resolve it. As mention above looks like the commits from Lukas Stockner on 3-25-2023. The "Cycles: Use per-microfacet Fresnel term for Glass closures" or "Cycles: Make Fresnel term independent of microfacet closure type" broke the transmission render passes.

Below is simple glass ball the cycles viewport shading is setup for "Transmission Indirect" pass. See attach blend file Material_GlassBSDF.blend.

3.51
Correct "Transmission Indirect" pass for the ball with the GlassBSDF material.
image

3.60 beta or 4.00 alpha
Notice the over bright image data from the ball with the GlassBSDF. If you connect the PrincipleBSDF setup as glass material with "Transmission" value 1.0 it looks the same as 3.51.
image

The latest 3.6 beta and 4.0 alpha from 5/29/2023. It does not resolve it. As mention above looks like the commits from Lukas Stockner on 3-25-2023. The "Cycles: Use per-microfacet Fresnel term for Glass closures" or "Cycles: Make Fresnel term independent of microfacet closure type" broke the transmission render passes. Below is simple glass ball the cycles viewport shading is setup for "Transmission Indirect" pass. See attach blend file Material_GlassBSDF.blend. 3.51 Correct "Transmission Indirect" pass for the ball with the GlassBSDF material. ![image](/attachments/0bb807d3-139b-4211-b227-450a1465ef4c) 3.60 beta or 4.00 alpha Notice the over bright image data from the ball with the GlassBSDF. If you connect the PrincipleBSDF setup as glass material with "Transmission" value 1.0 it looks the same as 3.51. ![image](/attachments/0dd22b28-971e-4cfa-9a1a-e3e071b45f7c)
Member

Thanks. Can confirm the regression (broke between 6b8cdd597996 - 175b1b449ec2).
I think your findings are correct. This is very likely affected by 014f6e4309 / 5f9b518a8b
cc @LukasStockner

Thanks. Can confirm the regression (broke between `6b8cdd597996 - 175b1b449ec2`). I think your findings are correct. This is very likely affected by 014f6e4309 / 5f9b518a8b cc @LukasStockner
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-30 00:36:27 +02:00
Author

The latest commit did solved the issue for the simple ball GlassBSDF. It failed in a slightly more complex setup. Below is simple glass car setup where transmission direct fails for GlassBSDF in the latest 3.60 beta, but works fine in 3.51 or replacing the GlassBSDF with the PrincipleBSDF configure as a glass shader with transmission of 1.0. See attach "CarGlassBSDF_Bright.blend".

3.51 Transmission Direct with GlassBSDF
image

3.60 beta with your latest commit - Transmission Direct with GlassBSDF.
image

The latest commit did solved the issue for the simple ball GlassBSDF. It failed in a slightly more complex setup. Below is simple glass car setup where transmission direct fails for GlassBSDF in the latest 3.60 beta, but works fine in 3.51 or replacing the GlassBSDF with the PrincipleBSDF configure as a glass shader with transmission of 1.0. See attach "CarGlassBSDF_Bright.blend". 3.51 Transmission Direct with GlassBSDF ![image](/attachments/842b8b8a-d441-4ceb-892b-9dafc3fdb424) 3.60 beta with your latest commit - Transmission Direct with GlassBSDF. ![image](/attachments/8d6236f3-b639-4e36-ae9a-4cc7c2c0a587)
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2023-05-30 10:00:23 +02:00
Member

confirming again.

confirming again.
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-05 06:04:36 +02:00
Member

Hm, yeah, the issue here is that the current code expects each closure to be diffuse OR glossy OR transmissive, so the unified Glass closure can't end up writing to glossy and transmission.

Should be doable to change that logic specifically for Glass, I'll have a look.

Hm, yeah, the issue here is that the current code expects each closure to be diffuse OR glossy OR transmissive, so the unified Glass closure can't end up writing to glossy and transmission. Should be doable to change that logic specifically for Glass, I'll have a look.
Member

FYI, the fix is in this branch, I can't create a PR into the release branch currently: https://projects.blender.org/LukasStockner/blender/src/branch/glass-albedo-fix

FYI, the fix is in this branch, I can't create a PR into the release branch currently: https://projects.blender.org/LukasStockner/blender/src/branch/glass-albedo-fix
Author

I check the "glass-albedo-fix" branch and can confirm that the fix for the glass transmission passes is working in this branch.

Thanks for looking into this bug.

I check the "glass-albedo-fix" branch and can confirm that the fix for the glass transmission passes is working in this branch. Thanks for looking into this bug.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-13 01:57:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108211
No description provided.