Fix #108211: Incorrect Transmission Color pass due to merged Glass closure